Update README.md with xml support sections